# quantize

./: .gitignore  .readthedocs.yml  README.md  example.py  pyproject.toml  setup_venv.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  introduction.rst  license.rst  usage.rst
quantize/: __init__.py  quantize.py
tests/: test_quantize.py
